[ThreadJoin] Add thread join example

--- a/unix/CMakeLists.txt
+++ b/unix/CMakeLists.txt
@@ -1,2 +1,6 @@
 # Fork
 add_executable(fork fork/fork.cpp)
+
+# Thread join
+add_executable(threadJoin threadJoin/threadJoin.cpp)
+target_link_libraries(threadJoin pthread)
