[HungryPhilosophers] Add mutex solution

--- a/unix/CMakeLists.txt
+++ b/unix/CMakeLists.txt
@@ -8,3 +8,7 @@ target_link_libraries(threadJoin pthread)
 # Multiple joins
 add_executable(multipleJoins multipleJoins/multipleJoins.cpp)
 target_link_libraries(multipleJoins pthread)
+
+# Hungry Philosophers. Mutex
+add_executable(hungryPhilosophers hungryPhilosophers/hungryPhilosophersMtx.cpp)
+target_link_libraries(hungryPhilosophers pthread)
