[Semaphore] Create custom semaphore implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(cppMultiThreading)
 
 add_definitions("-std=c++17")
 
+set(UNIX_SOURCE_PATH ${PROJECT_SOURCE_DIR}/unix)
+
 add_subdirectory(unix)
