[HungryPhilosophers] Add semaphore solution

--- a/unix/CMakeLists.txt
+++ b/unix/CMakeLists.txt
@@ -10,8 +10,8 @@ add_executable(multipleJoins multipleJoins/multipleJoins.cpp)
 target_link_libraries(multipleJoins pthread)
 
 # Hungry Philosophers. Mutex
-add_executable(hungryPhilosophers hungryPhilosophers/hungryPhilosophersMtx.cpp)
-target_link_libraries(hungryPhilosophers pthread)
+add_executable(hungryPhilosophersMtx hungryPhilosophers/hungryPhilosophersMtx.cpp)
+target_link_libraries(hungryPhilosophersMtx pthread)
 
 # Semaphore
 include_directories(${UNIX_SOURCE_PATH}/semaphore)
@@ -22,3 +22,7 @@ add_library(
         )
 add_executable(semaphore semaphore/semaphoreTest.cpp)
 target_link_libraries(semaphore PRIVATE semaphoreLib pthread)
+
+# Hungry Philosophers. Semaphore
+add_executable(hungryPhilosophersSemaphore hungryPhilosophers/hungryPhilosophersSemaphore.cpp)
+target_link_libraries(hungryPhilosophersSemaphore PRIVATE semaphoreLib pthread)
