[Win32Api] Add simple thread example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,7 @@ project(cppMultiThreading)
 add_definitions("-std=c++17")
 
 set(SOURCE_PATH ${PROJECT_SOURCE_DIR}/src)
-
 add_subdirectory(src)
+
+set(WIN32_SOURCE_PATH ${PROJECT_SOURCE_DIR}/win32Api)
+add_subdirectory(win32Api)
