--- a/win32Api/CMakeLists.txt
+++ b/win32Api/CMakeLists.txt
@@ -1,2 +1,5 @@
 # Simple Thread
 add_executable(simpleThread simpleThread/simpleThread.cpp)
+
+# Thread addition
+add_executable(threadAddition threadAddition/threadAddition.cpp)
