[Win32Api] Create Mutex example

--- a/win32Api/CMakeLists.txt
+++ b/win32Api/CMakeLists.txt
@@ -3,3 +3,6 @@ add_executable(simpleThread simpleThread/simpleThread.cpp)
 
 # Thread addition
 add_executable(threadAddition threadAddition/threadAddition.cpp)
+
+# Mutex
+add_executable(createMutex mutex/createMutex.cpp)
