[Unix] Add thread creation samples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,6 @@ add_subdirectory(src)
 
 set(WIN32_SOURCE_PATH ${PROJECT_SOURCE_DIR}/win32Api)
 add_subdirectory(win32Api)
+
+set(UNIX_SOURCE_PATH ${PROJECT_SOURCE_DIR}/unix)
+add_subdirectory(unix)
