[Unix] HungryPhilosophers add events solution

--- a/unix/CMakeLists.txt
+++ b/unix/CMakeLists.txt
@@ -27,3 +27,7 @@ target_link_libraries(semaphoreUnixTest PRIVATE semaphoreUnixLib pthread)
 # Hungry Philosophers. Semaphore
 add_executable(hungryPhilosophersSemaphoreUnix hungryPhilosophers/hungryPhilosophersSemaphore.cpp)
 target_link_libraries(hungryPhilosophersSemaphoreUnix PRIVATE semaphoreUnixLib pthread)
+
+# Hungry Philosophers. Events
+add_executable(hungryPhilosophersEventsUnix hungryPhilosophers/hungryPhilosophersEvents.cpp)
+target_link_libraries(hungryPhilosophersEventsUnix PRIVATE pthread)
