[Win32Api] Add synchronized print example

--- a/win32Api/CMakeLists.txt
+++ b/win32Api/CMakeLists.txt
@@ -6,3 +6,6 @@ add_executable(threadAddition threadAddition/threadAddition.cpp)
 
 # Mutex
 add_executable(createMutex mutex/createMutex.cpp)
+
+# Synchronized print
+add_executable(synchronizedPrintWin32Api mutex/synchronizedPrint.cpp)
